--- a/tanaqr.html
+++ b/tanaqr.html
@@ -80,7 +80,7 @@ color: var(–muted);
 letter-spacing: 0.15em;
 }
 .modeCards {
-padding: 0 16px;
+padding: 0 16px 24px;
 display: flex;
 flex-direction: column;
 gap: 14px;
@@ -524,7 +524,7 @@ border-radius: 12px;
 padding: 12px 16px;
 display: flex;
 align-items: center;
-justify-content: space-between;
+gap: 12px;
 }
 .allShelfId {
 font-size: 18px;
