tanaqr.html を更新

--- a/tanaqr.html
+++ b/tanaqr.html
@@ -6,8 +6,10 @@
 <title>棚入出庫管理</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <meta name="format-detection" content="telephone=no" />
+<meta name="color-scheme" content="dark" />
 <style>
 :root {
+  color-scheme: dark;
   --bg: #0f1117;
   --surface: #1a1d27;
   --surface2: #222636;
@@ -24,10 +26,19 @@
 }
 
 - { box-sizing: border-box; margin: 0; padding: 0; }
-  html, body { height: 100%; overflow-x: hidden; }
+  html { height: 100%; background: #0f1117; }
+
+/* ボタン・入力のフォントをbodyから継承 */
+button, input, select, textarea {
+font-family: inherit;
+font-size: inherit;
+color: inherit;
+}
 
 body {
-background: var(–bg);
+height: 100%;
+overflow-x: hidden;
+background: #0f1117;
 color: var(–text);
 font-family: var(–font);
 -webkit-touch-callout: none;
