--- a/tanaqr.html
+++ b/tanaqr.html
@@ -6,8 +6,10 @@
 <title>棚入出庫管理</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <meta name="format-detection" content="telephone=no" />
+<meta name="color-scheme" content="light" />
 <style>
 :root {
+  color-scheme: light;
   --bg: #0f1117;
   --surface: #1a1d27;
   --surface2: #222636;
